--- a/backend/composer.json
+++ b/backend/composer.json
@@ -9,6 +9,7 @@
         "composer/package-versions-deprecated": "1.11.99.4",
         "doctrine/annotations": "^1.0",
         "doctrine/doctrine-bundle": "^2.4",
+        "doctrine/doctrine-fixtures-bundle": "^3.4",
         "doctrine/doctrine-migrations-bundle": "^3.1",
         "doctrine/orm": "^2.9",
         "lexik/jwt-authentication-bundle": "^2.13",
