--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,7 +19,7 @@ services:
           - php
         
     mysql:
-        image: mysql:5.7
+        image: webhippie/mariadb
         container_name: sf4_mysql
         volumes:
             - .docker/data/db:/var/lib/mysql
