--- a/.docker/node/Dockerfile
+++ b/.docker/node/Dockerfile
@@ -13,6 +13,7 @@ WORKDIR $HOME/app
 
 RUN npm i -g npm@latest
 
+RUN chmod -R 777 /home/node/app
 RUN npm install -g @angular/cli@latest && npm cache clean --force
 RUN npm install --save-dev @angular-devkit/build-angular
 RUN npm install --save
