--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,93 +1,46 @@
-# Run docker-compose build
-# Run docker-compose up
-# Live long and prosper
-# Run docker-compose build
-# Run docker-compose up
-# Live long and prosper
+application:
+  build: backend
+  volumes:
+    - "./backend:/var/www"
+  links:
+    - database
 
-version: '3.1'
-services:
-    apache:
-        build: .docker/apache
-        container_name: sf4_apache
-        ports:
-          - 82:80
-        volumes:
-          - .docker/config/vhosts:/etc/apache2/sites-enabled
-          - ${SYMFONY_APP}:/home/wwwroot/sf4
-        depends_on:
-          - php
-        
-    mysql:
-        image: webhippie/mariadb
-        container_name: sf4_mysql
-        volumes:
-            - .docker/data/db:/var/lib/mysql
-        ports:
-          - 3306:3306
-        environment:
-            MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
-            MYSQL_DATABASE: ${MYSQL_DATABASE}
-            MYSQL_USER: ${MYSQL_USER}
-            MYSQL_PASSWORD: ${MYSQL_PASSWORD}
-        
-          
+client:
+  build: frontend
+  volumes:
+    - "./frontend:/app"
+  links:
+    - nginx-back
 
-    php:
-        build: .docker/php
-        container_name: sf4_php
-        volumes:
-          - ${SYMFONY_APP}:/home/wwwroot/sf4
-        environment:
-          - maildev_host=sf4_maildev
-        depends_on:
-          - maildev
-          - mysql
-        
-          
+database:
+  image: webhippie/mariadb
+  ports:
+    - 3306:3306
+  environment:
+    MYSQL_ROOT_PASSWORD: root
+    MYSQL_DATABASE: artist_management_meher
+    MYSQL_USER: root
+    MYSQL_PASSWORD: root
+    POSTGRES_PASSWORD: postgres
+    POSTGRES_USER: postgres
+    POSTGRES_DB: symfony_dev
 
-    phpmyadmin:
-        image: phpmyadmin/phpmyadmin
-        container_name: sf4_phpmyadmin
-        restart: always
-        ports:
-            - 8080:80
-        links:
-            - mysql
-        environment:
-          PMA_HOST: mysql
-        
-          
+nginx-front:
+  image: nginx
+  ports:
+    - 8080:8080
+  links:
+    - client
+  volumes:
+    - ./config/nginx/nginx.conf:/etc/nginx/nginx.conf
+    - ./config/nginx/angular.conf:/etc/nginx/conf.d/default.conf
 
-    maildev:
-        image: djfarrelly/maildev
-        container_name: sf4_maildev
-        ports:
-          - 8001:80
-        
-          
-
-    nginx:
-      container_name: angular_nginx
-      build: .docker/nginx
-      volumes:
-        - ${ANGULAR_APP}/dist/frontend:/usr/share/nginx/html
-      ports:
-        - "81:80"
-        - "443:443"
-      
-    node:
-        build: .docker/node
-        container_name: angular_node
-        ports:
-            - 4200:4200
-        volumes:
-            - ${ANGULAR_APP}:/home/node/app/frontend
-        tty: true
-        command:
-            - /bin/sh
-            - -c
-            - |
-                cd /home/node/app/frontend && npm start
-        expose:
-            - "4200"
+nginx-back:
+  image: nginx
+  ports:
+    - 8000:8000
+  links:
+    - application
+  volumes:
+    - ./config/nginx/nginx.conf:/etc/nginx/nginx.conf
+    - ./config/nginx/symfony.conf:/etc/nginx/conf.d/default.conf
