--- a/.env
+++ b/.env
@@ -1,7 +1,20 @@
-MYSQL_ROOT_PASSWORD=root
-MYSQL_DATABASE=sf4
-MYSQL_USER=sf4
-MYSQL_PASSWORD=sf4
 
-SYMFONY_APP=./backend
-ANGULAR_APP=./frontend
+# Rename this file to .env
+# Optional: Replace sample values here with your values
+
+# MySQL Variables
+MYSQL_ROOT_PASSWORD=
+MYSQL_DATABASE=artist_management
+MYSQL_USER=root
+MYSQL_PASSWORD=
+
+# PHP Variables
+APP_ENV=dev
+APP_SECRET=24e17c47430bd2044a61c131c1cf6990
+JWT_PASSPHRASE=4sz7zpqnjeklc8d91k5ude2nus8nw63i
+
+# Exposed Ports
+# You can change these port values if they clash with
+# open ports on your local machine
+NGINX_PORT=6567
+MYSQL_PORT=7656
