--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,46 +1,50 @@
-application:
-  build: backend
-  volumes:
-    - "./backend:/var/www"
-  links:
-    - database
+version: '3'
 
-client:
-  build: frontend
-  volumes:
-    - "./frontend:/app"
-  links:
-    - nginx-back
+services:
+    db:
+        image: mysql:8.0
+        command: --default-authentication-plugin=mysql_native_password
+        volumes:
+            - ./database/:/var/lib/mysql
+        ports:
+            - "${MYSQL_PORT}:3306"
+        environment:
+            MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
+            MYSQL_DATABASE: ${MYSQL_DATABASE}
+            MYSQL_USER: ${MYSQL_USER}
+            MYSQL_PASSWORD: ${MYSQL_PASSWORD}
+        networks:
+            - database
 
-database:
-  image: webhippie/mariadb
-  ports:
-    - 3306:3306
-  environment:
-    MYSQL_ROOT_PASSWORD: root
-    MYSQL_DATABASE: artist_management_meher
-    MYSQL_USER: root
-    MYSQL_PASSWORD: root
-    POSTGRES_PASSWORD: postgres
-    POSTGRES_USER: postgres
-    POSTGRES_DB: symfony_dev
+    php:
+        build:
+            context: .
+            dockerfile: docker/php/Dockerfile
+        volumes:
+            - ./app/:/var/www/app
+        environment:
+            APP_ENV: ${APP_ENV}
+            APP_SECRET: ${APP_SECRET}
+            JWT_PASSPHRASE: ${JWT_PASSPHRASE}
+            DATABASE_URL: "mysql://${MYSQL_USER}:${MYSQL_PASSWORD}@db:3306/${MYSQL_DATABASE}"
+        depends_on:
+            - db
+        networks:
+            - server
+            - database
+    nginx:
+        build:
+            context: .
+            dockerfile: docker/nginx/Dockerfile
+        volumes:
+            - ./app/:/var/www/backend/
+        ports:
+            - ${NGINX_PORT}:80
+        depends_on:
+            - php
+        networks:
+            - server
 
-nginx-front:
-  image: nginx
-  ports:
-    - 8080:8080
-  links:
-    - client
-  volumes:
-    - ./config/nginx/nginx.conf:/etc/nginx/nginx.conf
-    - ./config/nginx/angular.conf:/etc/nginx/conf.d/default.conf
-
-nginx-back:
-  image: nginx
-  ports:
-    - 8000:8000
-  links:
-    - application
-  volumes:
-    - ./config/nginx/nginx.conf:/etc/nginx/nginx.conf
-    - ./config/nginx/symfony.conf:/etc/nginx/conf.d/default.conf
+networks:
+    database:
+    server:
