dockerize the entire project backend and frontend

--- a/.env.dist
+++ b/.env.dist
@@ -1,19 +1,7 @@
-# Rename this file to .env
-# Optional: Replace sample values here with your values
+MYSQL_ROOT_PASSWORD=root
+MYSQL_DATABASE=artist_manag_meher
+MYSQL_USER=sf4
+MYSQL_PASSWORD=sf4
 
-# MySQL Variables
-MYSQL_ROOT_PASSWORD=symfony_social_network_app_root_password
-MYSQL_DATABASE=symfony_social_network_app_database
-MYSQL_USER=symfony_social_network_app_user
-MYSQL_PASSWORD=symfony_social_network_app_password
-
-# PHP Variables
-APP_ENV=dev
-APP_SECRET=24e17c47430bd2044a61c131c1cf6990
-JWT_PASSPHRASE=zpqnj7e91k5uklc8dde2n4szus8nw63i
-
-# Exposed Ports
-# You can change these port values if they clash with
-# open ports on your local machine
-NGINX_PORT=6567
-MYSQL_PORT=7656
+SYMFONY_APP=./backend
+ANGULAR_APP=./frontend
