--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,50 +1,92 @@
-version: '3'
+# Run docker-compose build
+# Run docker-compose up
+# Live long and prosper
 
+version: '3'
 services:
-    db:
-        image: mysql:8.0
-        command: --default-authentication-plugin=mysql_native_password
-        volumes:
-            - ./database/:/var/lib/mysql
+    apache:
+        build: .docker/apache
+        container_name: sf4_apache
         ports:
-            - "${MYSQL_PORT}:3306"
+          - 82:80
+        volumes:
+          - .docker/config/vhosts:/etc/apache2/sites-enabled
+          - ${SYMFONY_APP}:/home/wwwroot/backend
+        depends_on:
+          - php
+        
+          
+
+    mysql:
+        image: mysql:5.7
+        container_name: sf4_mysql
+        volumes:
+            - .docker/data/db:/var/lib/mysql
+        ports:
+          - 3306:3306
         environment:
             MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
             MYSQL_DATABASE: ${MYSQL_DATABASE}
             MYSQL_USER: ${MYSQL_USER}
             MYSQL_PASSWORD: ${MYSQL_PASSWORD}
-        networks:
-            - database
+        
+          
 
     php:
-        build:
-            context: .
-            dockerfile: docker/php/Dockerfile
+        build: .docker/php
+        container_name: sf4_php
         volumes:
-            - ./app/:/var/www/app
+          - ${SYMFONY_APP}:/home/wwwroot/backend
         environment:
-            APP_ENV: ${APP_ENV}
-            APP_SECRET: ${APP_SECRET}
-            JWT_PASSPHRASE: ${JWT_PASSPHRASE}
-            DATABASE_URL: "mysql://${MYSQL_USER}:${MYSQL_PASSWORD}@db:3306/${MYSQL_DATABASE}"
+          - maildev_host=sf4_maildev
         depends_on:
-            - db
-        networks:
-            - server
-            - database
-    nginx:
-        build:
-            context: .
-            dockerfile: docker/nginx/Dockerfile
-        volumes:
-            - ./app/:/var/www/backend/
-        ports:
-            - ${NGINX_PORT}:80
-        depends_on:
-            - php
-        networks:
-            - server
+          - maildev
+          - mysql
+        
+          
 
-networks:
-    database:
-    server:
+    phpmyadmin:
+        image: phpmyadmin/phpmyadmin
+        container_name: sf4_phpmyadmin
+        restart: always
+        ports:
+            - 8080:80
+        links:
+            - mysql
+        environment:
+          PMA_HOST: mysql
+        
+          
+
+    maildev:
+        image: djfarrelly/maildev
+        container_name: sf4_maildev
+        ports:
+          - 8001:80
+        
+          
+
+    nginx:
+      container_name: angular_nginx
+      build: .docker/nginx
+      volumes:
+        - ${ANGULAR_APP}/dist/Angular-project:/usr/share/nginx/html
+      ports:
+        - "81:80"
+        - "443:443"
+      
+    node:
+        build: .docker/node
+        container_name: angular_node
+        ports:
+            - 4200:4200
+        volumes:
+            - ${ANGULAR_APP}:/home/node/app/frontend
+        tty: true
+        command:
+            - /bin/sh
+            - -c
+            - |
+                cd /home/node/app/frontend && npm start
+        expose:
+            - "4200"
