--- a/backend/.env
+++ b/backend/.env
@@ -14,8 +14,8 @@
 # https://symfony.com/doc/current/best_practices.html#use-environment-variables-for-infrastructure-configuration
 
 ###> symfony/framework-bundle ###
-APP_ENV=dev
-APP_SECRET=74a9c8fdb91a7ac9c09d4d71e43a8b4b
+# APP_ENV=dev
+# APP_SECRET=74a9c8fdb91a7ac9c09d4d71e43a8b4b
 #TRUSTED_PROXIES=127.0.0.0/8,10.0.0.0/8,172.16.0.0/12,192.168.0.0/16
 #TRUSTED_HOSTS='^(localhost|example\.com)$'
 ###< symfony/framework-bundle ###
@@ -30,9 +30,9 @@ DATABASE_URL="mysql://root:@127.0.0.1:3306/artist_management?serverVersion=maria
 ###< doctrine/doctrine-bundle ###
 
 ###> lexik/jwt-authentication-bundle ###
-JWT_SECRET_KEY=%kernel.project_dir%/config/jwt/private.pem
-JWT_PUBLIC_KEY=%kernel.project_dir%/config/jwt/public.pem
-JWT_PASSPHRASE=048b13adf023180e18eaf8dee760e033
+# JWT_SECRET_KEY=%kernel.project_dir%/config/jwt/private.pem
+# JWT_PUBLIC_KEY=%kernel.project_dir%/config/jwt/public.pem
+# JWT_PASSPHRASE=048b13adf023180e18eaf8dee760e033
 JWT_TOKEN_TTL=3600
 ###< lexik/jwt-authentication-bundle ###
 
